Added better timeline channel unmodifiable key support